# zhres-api

./: .dockerignore  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  flash.py  package-lock.json  package.json  pyproject.toml  requirements.txt  robo.yml  server.py
zhres/: __init__.py
zhres/api/: lib.py  tts.py  zh.py
zhres/lib/: zh.py
