[tool.poetry]
name = "zhres"
version = "0.1.0"
description = ""
authors = ["Pacharapol Withayasakpunt"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6.8"
flask = "^1.0"
wordfreq = "^2.2"
jieba = "^0.39.0"
pylint = "^2.3"
flask-cors = "^3.0"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]
requests = "^2.22"
xlsxwriter = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
